--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,9 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= data.page.title || "The Middleman" %></title>
     
+    <script type="text/javascript" src="//use.typekit.net/lpe3cwl.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
   </head>
