Switch hotmail,facebook and gmail to montserat

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,13 +13,13 @@ title: Fight For Your Future
 
   <div id="search-media">
     <div class="current">
-      <h3 class="mono">Search your <span>Gmail</span> for:</h3>
+      <h3 class="">Search your <span>Gmail</span> for:</h3>
     </div>
 
     <div class="switch">
-      <a href="#" class="mono">Switch to <span>Hotmail</span></a>
+      <a href="#" class="">Switch to <span>Hotmail</span></a>
       <p>|</p>
-      <a href="#" class="mono">Switch to <span>Facebook</span></a>
+      <a href="#" class="">Switch to <span>Facebook</span></a>
     </div>
 
     <div class="content">
