Remove typekit dependency and use proper mono font

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -9,8 +9,13 @@ body {
   clear: both;
 }
 
+@font-face{
+  font-family:'FixedSys';
+  src: url('/font/Fixedsys500c.ttf') format('truetype');
+}
+
 .mono {
-  font-family: "hydrophilia-iced", "courier-prime", monospace;
+  font-family: FixedSys, monospace;
   font-weight: 700;
 }
 
