Resolve gap issue

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,83 +3,87 @@ title: Fight For Your Future
 ---
 
 <div id="pc">
-  <div id="first-type">
-    <p class="mono type type-1"> </p>
-    <p class="mono type type-2"> </p>
-    <p class="mono type type-3"> </p>
-    <p class="mono type type-4"> </p>
-    <p class="mono type type-5"> </p>
-  </div>
-
-  <div id="search-media">
-    <div class="current">
-      <h3 class="">Search your <span>Gmail</span> for:</h3>
+  <div class="inner">
+    <div id="first-type">
+      <p class="mono type type-1"> </p>
+      <p class="mono type type-2"> </p>
+      <p class="mono type type-3"> </p>
+      <p class="mono type type-4"> </p>
+      <p class="mono type type-5"> </p>
     </div>
 
-    <div class="switch">
-      <a href="#" class="">Switch to <span>Hotmail</span></a>
-      <p>|</p>
-      <a href="#" class="">Switch to <span>Facebook</span></a>
-    </div>
+    <div id="search-media">
+      <div class="current">
+        <h3 class="">Search your <span>Gmail</span> for:</h3>
+      </div>
 
-    <div class="content">
-      <a class="btn" href="#">DRUGS</a>
-      <a class="btn" href="#">SEX</a>
-      <a class="btn" href="#">PARTYING</a>
-      <a class="btn" href="#">TAX INFO, SSNs, DOCS</a>
+      <div class="switch">
+        <a href="#" class="">Switch to <span>Hotmail</span></a>
+        <p>|</p>
+        <a href="#" class="">Switch to <span>Facebook</span></a>
+      </div>
+
+      <div class="content">
+        <a class="btn" href="#">DRUGS</a>
+        <a class="btn" href="#">SEX</a>
+        <a class="btn" href="#">PARTYING</a>
+        <a class="btn" href="#">TAX INFO, SSNs, DOCS</a>
+        <div class="clear"></div>
+        <a class="btn" href="#">TORRENTING</a>
+        <a class="btn" href="#">GUNS</a>
+        <a class="btn" href="#">POLITICS</a>
+        <a class="btn" href="#">PORN</a>
+        <div class="clear"></div>
+        <a class="btn" href="#">HEALTH INFO</a>
+        <a class="btn" href="#">OTHER SECRETS</a>
+      </div>
       <div class="clear"></div>
-      <a class="btn" href="#">TORRENTING</a>
-      <a class="btn" href="#">GUNS</a>
-      <a class="btn" href="#">POLITICS</a>
-      <a class="btn" href="#">PORN</a>
-      <div class="clear"></div>
-      <a class="btn" href="#">HEALTH INFO</a>
-      <a class="btn" href="#">OTHER SECRETS</a>
+
+      <div class="disclaimer">
+        <img src="/images/alert.png"/>
+        <p>*Quick Disclaimer*: We're not actually from the government. This site is for educational purposes. 
+          This page will never have access to anything that you are searching for. The tool simply allows you to search your *own* email contents in a new window (you’ll need to be logged in.) We will retain no data about you or any of your information. An outdated law from 1986 leaves too much room for the government to get all up in your business. It's called the Electronic Communications Privacy Act (ECPA) and it's in desperate need of an update.</p>
+        <div class="shadow"></div>
+      </div>
     </div>
     <div class="clear"></div>
 
-    <div class="disclaimer">
-      <img src="/images/alert.png"/>
-      <p>*Quick Disclaimer*: We're not actually from the government. This site is for educational purposes. 
-        This page will never have access to anything that you are searching for. The tool simply allows you to search your *own* email contents in a new window (you’ll need to be logged in.) We will retain no data about you or any of your information. An outdated law from 1986 leaves too much room for the government to get all up in your business. It's called the Electronic Communications Privacy Act (ECPA) and it's in desperate need of an update.</p>
-      <div class="shadow"></div>
-    </div>
-  </div>
-  <div class="clear"></div>
+    <p class="mono type type-6"> </p>
 
-  <p class="mono type type-6"> </p>
-
-  <div class="social-buttons">
-    <div>
-      <a href="#" class="social facebook"></a>
-      <a href="#" class="social twitter"></a>
-    </div>
-    <div class="clear"></div>
-    <div>
-      <a href="#" class="social tumblr"></a>
-      <a href="#" class="social google"></a>
-    </div>
-  </div>
-
-  <div id="sign">
-    <h1>This is no joke.</h1>
-    <h2>Our most basic rights are at stake.</h1>
-
-    <h4>Tell the U.S. Government: "Want to read my stuff?" Go get a warrent!</h4>
-
-    <form>
-      <div class="field">
-        <input type="text" placeholder="Name"/>
+    <div class="social-buttons">
+      <div>
+        <a href="#" class="social facebook"></a>
+        <a href="#" class="social twitter"></a>
       </div>
-      <div class="field">
-        <input type="text" placeholder="E-mail"/>
+      <div class="clear"></div>
+      <div>
+        <a href="#" class="social tumblr"></a>
+        <a href="#" class="social google"></a>
       </div>
-      <div class="actions">
-        <input type="submit" value="sign"/>
-      </div>
-    </form>
+    </div>
 
-    <p>Sign up to receive occasional updates about defending online privacy.</p>
+    <div id="sign">
+      <div class="pad">
+        <h1>This is no joke.</h1>
+        <h2>Our most basic rights are at stake.</h1>
+
+        <h4>Tell the U.S. Government: "Want to read my stuff?" Go get a warrent!</h4>
+
+        <form>
+          <div class="field">
+            <input type="text" placeholder="Name"/>
+          </div>
+          <div class="field">
+            <input type="text" placeholder="E-mail"/>
+          </div>
+          <div class="actions">
+            <input type="submit" value="sign"/>
+          </div>
+        </form>
+
+        <p>Sign up to receive occasional updates about defending online privacy.</p>
+      </div>
+    </div>
   </div>
 </div>
 
