--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,27 @@
 title: Fight For Your Future
 ---
 
+<div id="modal">
+  <a href="#" class="close">Close</a>
+  <div class="title">Is this site creeping you out?</div>
+  <div class="content">
+    <p class="lead">Tell the U.S. Government: "Want to read my stuff? Go get a warrant."</p>
+    
+    <form>
+      <div class="field">
+        <input type="text" placeholder="Name"/>
+      </div>
+      <div class="field">
+        <input type="text" placeholder="E-mail"/>
+      </div>
+      <div class="actions">
+        <input type="submit" value="sign"/>
+      </div>
+    </form>
+
+    <p>Sign up to receive occasional updates about defending online privacy.</p>
+  </div>
+</div>
 <div id="pc">
   <div class="inner">
     <div id="first-type">
