--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -416,3 +416,79 @@ select {
   width: 114px;
   z-index: 9;
 }
+
+#modal {
+  width: 850px;
+  position: fixed;
+  left: 50%;
+  top: 200px;
+  margin-left: -425px;
+  z-index: 1000;
+  border: 6px solid #717171;
+  border-radius: 6px;
+  box-shadow: 0 3px 8px #333;
+  
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    text-indent: -5000px;
+    overflow: hidden;
+    z-index: 1001;
+    width: 13px;
+    height: 13px;
+    background: transparent url('/images/x.png');
+    opacity: 0.6;
+    
+    &:hover {
+      opacity: 1;
+    }
+  }
+  
+  .title {
+    font-size: 38px;
+    text-align: center;
+    background: #f8ac1a;
+    line-height: 100px;
+    border-bottom: 2px solid #d1a624;
+    text-shadow: 0 1px 1px white;
+  }
+  
+  .content {
+    background: white;
+    padding: 20px 50px 50px 50px;
+    
+    p {
+      font-size: 16px;
+      color: #717171;
+    }
+    
+    p.lead {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: black;
+      margin-bottom: 30px;
+    }
+  }
+  
+  form {
+    .field {
+      float: left;
+    }
+
+    input[type="text"] {
+      -webkit-box-shadow: inset 5px 5px  5px rgba(0,0,0,0.09);
+    }
+
+    input[type="submit"] {
+      background: url("/images/sign.png");
+      border: none;
+      height: 49px;
+      padding: 16px;
+      text-indent: -9999px;
+      width: 204px;
+      -webkit-appearance: none;
+    }
+  }
+}
