--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,7 +20,7 @@ title: Fight For Your Future
       </div>
     </form>
 
-    <p>Sign up to receive occasional updates about defending online privacy.</p>
+    <p><input type="checkbox" id="c1" /><label for="c1"><span></span> Sign up to receive occasional updates about defending online privacy.</label></p>
   </div>
 </div>
 <div id="pc">
@@ -102,7 +102,7 @@ title: Fight For Your Future
           </div>
         </form>
 
-        <p>Sign up to receive occasional updates about defending online privacy.</p>
+        <p><input type="checkbox" id="c1" /><label for="c1"><span></span> Sign up to receive occasional updates about defending online privacy.</label></p>
       </div>
     </div>
   </div>
