--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -417,6 +417,27 @@ select {
   z-index: 9;
 }
 
+input[type="checkbox"] {
+  display: none;
+}
+input[type="checkbox"] + label {
+  line-height: 20px;
+}
+input[type="checkbox"] + label span {
+  background: url('/images/checkbox.png') left top no-repeat;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  margin-top: -4px;
+  margin-right: 5px;
+  cursor: pointer;
+  vertical-align: middle;
+  border: none;
+}
+input[type="checkbox"]:checked + label span {
+  background: url('/images/checkbox.png') left -20px no-repeat;
+}
+
 #modal {
   width: 850px;
   position: fixed;
