Resolve font weight and spacing issue

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -112,11 +112,11 @@ title: Fight For Your Future
   <h1 class="title">Seriously, Government?</h1>
   <p>When it was passed back in 1986, ECPA made sense. But now it's just crazy. Every day we move more of our lives online... our personal photographs, tax forms, bank statements, health information, political activity, romantic messages, and so much more. But outdated laws make it way too easy for the goverment to invade our online privacy, even though it *should* be protected by the 4th Amendment.</p>
 
-  <h2 class="thin">Right now the U.S. Government treats the Constitution as if it protects the stuff you  don't use... </h2>
+  <h2 class="thin">Right now the U.S. Government treats the Constitution as if it protects the stuff you don't use... </h2>
 
   <img class="use-examples" src="/images/use-example.png"/>
 
-  <h2 class="center">ECPA doesn't just let law enforcement spy on you. Employees of ANY of these government agencies could use the net to pry into your private life. Take your pick:</h2>
+  <h2 class="center thin">ECPA doesn't just let law enforcement spy on you. Employees of ANY of these government agencies could use the net to pry into your private life. Take your pick:</h2>
   
   <div class="select-container">
   <select class="styled-select">
