Fix font size issue above select

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -116,7 +116,7 @@ title: Fight For Your Future
 
   <img class="use-examples" src="/images/use-example.png"/>
 
-  <h2 class="center thin">ECPA doesn't just let law enforcement spy on you. Employees of ANY of these government agencies could use the net to pry into your private life. Take your pick:</h2>
+  <h2 class="center">ECPA doesn't just let law enforcement spy on you. Employees of ANY of these government agencies could use the net to pry into your private life.<br />Take your pick:</h2>
   
   <div class="select-container">
   <select class="styled-select">
