--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -245,6 +245,7 @@ form {
       display: block;
       margin-left: auto;
       margin-right: auto;
+      font-weight: 200;
       margin-top: 40px;
       text-align: center;
     }
