--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -114,7 +114,21 @@ title: Fight For Your Future
 
   <h2 class="thin">Right now the U.S. Government treats the Constitution as if it protects the stuff you don't use... </h2>
 
-  <img class="use-examples" src="/images/use-example.png"/>
+  <div id="use-examples">
+    <ul>
+      <li class="mail">Postal Mail</li>
+      <li class="files">Paper Files</li>
+      <li class="calls">Phone Calls</li>
+      <li class="data">Your Hard Drive</li>
+    </ul>
+    <h2 class="thin">But not the stuff you do use.</h2>
+    <ul>
+      <li class="mail">Postal Mail</li>
+      <li class="files-x">Paper Files</li>
+      <li class="messages">Text Messages</li>
+      <li class="storage">Cloud Storage</li>
+    </ul>
+  </div>
 
   <h2 class="center">ECPA doesn't just let law enforcement spy on you. Employees of ANY of these government agencies could use the net to pry into your private life.<br />Take your pick:</h2>
   
