--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -24,6 +24,7 @@ body {
 
 #use-examples {
   text-align: center;
+  background: url('/images/bubbles.jpg') no-repeat right top;
   
   .popup {
     position: absolute;
@@ -126,7 +127,7 @@ body {
   
   ul:first-child {
     border-bottom: 8px solid black;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
   }
 }
 
