--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -116,15 +116,15 @@ title: Fight For Your Future
 
   <div id="use-examples">
     <ul>
-      <li class="mail" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Postal Mail</li>
-      <li class="files" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Paper Files</li>
+      <li class="mail" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Postal mail</li>
+      <li class="files" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Paper Papers</li>
       <li class="calls" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Phone Calls</li>
       <li class="data" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Your Hard Drive</li>
     </ul>
     <h2 class="thin">But not the stuff you do use.</h2>
     <ul class="protections">
-      <li class="mail" data-protected="false" data-text="The gov't has frequently abused a loop-hole in ECPA to read private emails that have been opened or are more than 6 months old.">Email</li>
-      <li class="files-x" data-text="Protected! Except in extreme circumstances, gov't must get a warrant." data-protected="true">Paper Files</li>
+      <li class="mail" data-protected="false" data-text="The gov't has frequently abused a loop-hole in ECPA to read private emails that have been opened or are more than 6 months old.">E-mail</li>
+      <li class="files-x"data-protected="false" data-text="Protected! Except in extreme circumstances, gov't must get a warrant." data-protected="true">Online Docs</li>
       <li class="messages" data-protected="false" data-text="Text messaging didn't even exist when ECPA was passed, and it's language is vague enough that the gov't has used ECPA as a loop-hole to access texts without a warrant or probable cause.">Text Messages</li>
       <li class="storage" data-protected="false" data-text="The IRS recently apologized for exploiting ECPA to snoop on email, and said they would change their policy. But they still claim the right to look in your Google-Docs or other online documents">Cloud Storage</li>
     </ul>
