--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -88,7 +88,7 @@ title: Fight For Your Future
         <h1>This is no joke.</h1>
         <h2>Our most basic rights are at stake.</h1>
 
-        <h4>Tell the U.S. Government: "Want to read my stuff?" Go get a warrent!</h4>
+        <h4>Tell the U.S. Government: "Want to read my stuff?" Go get a warrant!</h4>
 
         <form>
           <div class="field">
