--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -112,7 +112,7 @@ title: Fight For Your Future
   <h1 class="title">Seriously, Government?</h1>
   <p>When it was passed back in 1986, ECPA made sense. But now it's just crazy. Every day we move more of our lives online... our personal photographs, tax forms, bank statements, health information, political activity, romantic messages, and so much more. But outdated laws make it way too easy for the goverment to invade our online privacy, even though it *should* be protected by the 4th Amendment.</p>
 
-  <h2 class="thin">Right now the U.S. Government treats the Constitution as if it protects the stuff you don't use... </h2>
+  <h2 class="thin">The U.S. Government treats the Constitution as if it protects the stuff you're using less...</h2>
 
   <div id="use-examples">
     <ul>
@@ -121,12 +121,12 @@ title: Fight For Your Future
       <li class="calls" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Phone Calls</li>
       <li class="data" data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant.">Your Hard Drive</li>
     </ul>
-    <h2 class="thin">But not the stuff you do use.</h2>
+    <h2 class="thin">But not the stuff you're using more.</h2>
     <ul class="protections">
       <li class="mail" data-protected="false" data-text="The gov't has frequently abused a loop-hole in ECPA to read private emails that have been opened or are more than 6 months old.">E-mail</li>
-      <li class="files-x"data-protected="false" data-text="Protected! Except in extreme circumstances, gov't must get a warrant." data-protected="true">Online Docs</li>
+      <li class="files-x" data-protected="false" data-text="The IRS recently apologized for exploiting ECPA to snoop on email, and said they would change their policy. But they still claim the right to look in your Google-Docs or other online documents" data-protected="true">Online Docs</li>
       <li class="messages" data-protected="false" data-text="Text messaging didn't even exist when ECPA was passed, and it's language is vague enough that the gov't has used ECPA as a loop-hole to access texts without a warrant or probable cause.">Text Messages</li>
-      <li class="storage" data-protected="false" data-text="The IRS recently apologized for exploiting ECPA to snoop on email, and said they would change their policy. But they still claim the right to look in your Google-Docs or other online documents">Cloud Storage</li>
+      <li class="storage" data-protected="false" data-text='Given that there is general agreement that soon nearly all business will be conducted "in the cloud," Congress desperately needs to update ECPA to reiterate that the 4th Amendment applies to all data stored in the cloud.'>Cloud Storage</li>
     </ul>
   </div>
 
