Minor updates to typing and text

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -133,7 +133,7 @@ body {
 
 #pc {
   background: url("/images/pc.png") no-repeat center bottom;
-  height: 1620px;
+  height: 1520px;
   margin: 0 auto;
   padding: 0;
   padding-top: 1px;
@@ -147,7 +147,7 @@ body {
   }
 
   .type {
-    color: #fff;
+    color: #00ff00;
     font-size: 34px;
     margin-left: auto;
     margin-right: auto;
