--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,6 +11,8 @@
     
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     
+    <script src="//cdn.optimizely.com/js/21249520.js"></script>
+    
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
   </head>
