--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -295,6 +295,7 @@ body {
 
       input[type="text"] {
         box-shadow: 0 1px 2px white;
+        max-width: 147px;
       }
 
       input[type="submit"] {
