Clean up minor items from trello

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Fight For Your Future
+title: We're watching you. Sincerely, the NSA.
 ---
 
 <div id="modal">
@@ -169,8 +169,6 @@ title: Fight For Your Future
   <div class="container">
     <div id="logos">
       <a href="#"><img src="/images/fftf.png" class="fftf"/></a>
-      <a href="#"><img src="/images/eff.png" class="eff"/></a>
-      <a href="#"><img src="/images/cdt.png" class"cdt"/></a>
     </div>
     <div class="clear"></div>
     <hr/>
