--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,24 @@
 title: We're watching you. Sincerely, the NSA.
 ---
 
+<div class="socialize" style="position: fixed; top: 10px; right: 10px; height: 350px; z-index: 9999">
+	<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			  var js, fjs = d.getElementsByTagName(s)[0];
+			  if (d.getElementById(id)) return;
+			  js = d.createElement(s); js.id = id;
+			  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+			  fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
+			<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
+			<div id="shareitup" style="overflow: visible">
+				<div class="fb-like" data-href="http://internetdefenseleague.org" data-send="true" data-layout="box_count" data-width="150" data-show-faces="true"></div>
+				<br />				<br />				<br />	
+				<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
+ </div>
+
 <div id="modal">
   <a href="#" class="close">Close</a>
   <div class="title">Is this site creeping you out?</div>
