--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -216,7 +216,14 @@ body {
         text-shadow: 0 0 1px #000000;
 
         border-radius: 3px;
-        background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#6ff0fa), to(#2374d6));
+        background: #6ff0fa; /* Old browsers */
+        background: -moz-linear-gradient(top, #6ff0fa 0%, #2374d6 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6ff0fa), color-stop(100%,#2374d6)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #6ff0fa 0%,#2374d6 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top, #6ff0fa 0%,#2374d6 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top, #6ff0fa 0%,#2374d6 100%); /* IE10+ */
+        background: linear-gradient(to bottom, #6ff0fa 0%,#2374d6 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6ff0fa', endColorstr='#2374d6',GradientType=0 ); /* IE6-9 */
       }
     }
 
