--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -102,7 +102,7 @@ title: We're watching you. Sincerely, the NSA.
     <div id="sign">
       <div class="pad">
         <h1>This is no joke, and illegal.</h1>
-        <h4>The US government has secretly built the largest, most illlegal surveillance system in history. Tell us if you think this is wrong and want to help stop it. Tell us if you think this is wrong and want to help stop it. </h4>
+        <h4>The US government has secretly built the largest, most illlegal surveillance system in history. Tell us if you think this is wrong and want to help stop it.</h4>
 
         <form action="http://hq-nt.salsalabs.com/save" method="POST">
           <input type="hidden" name="object" value="supporter">
