Update disclaimer image and other minor text changes

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,9 +13,9 @@ title: We're watching you. Sincerely, the NSA.
 			}(document, 'script', 'facebook-jssdk'));</script>
 			<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 			<div id="shareitup" style="overflow: visible">
-				<div class="fb-like" data-href="http://internetdefenseleague.org" data-send="true" data-layout="box_count" data-width="150" data-show-faces="true"></div>
+				<div class="fb-like" data-href="http://internetdefenseleague.org" data-send="false" data-layout="box_count" data-width="150" data-show-faces="true"></div>
 				<br />				<br />				<br />	
-				<a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+				<a href="https://twitter.com/share" data-text="It's unconstitutional -- but I'm watching you. You can see what I am watching here. Sincerely, the NSA." class="twitter-share-button">Tweet</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
  </div>
@@ -78,9 +78,7 @@ title: We're watching you. Sincerely, the NSA.
       <div class="clear"></div>
 
       <div class="disclaimer">
-        <img src="/images/alert.png"/>
-        <p>*Quick Disclaimer*: This site is for educational purposes. We will never have access to your email or anything that you are searching for. The tool simply allows you to search your *own* email contents in a new window (you'll need to be logged in.)</p>
-        <div class="shadow"></div>
+        <p>*Quick Disclaimer*: This site is for educational purposes. We will never have access to your email or anything that you are searching for. The tool simply allows you to search your *own* email contents in a new window (you'll be asked to login if you're not already).</p>
       </div>
     </div>
     <div class="clear"></div>
@@ -101,18 +99,12 @@ title: We're watching you. Sincerely, the NSA.
 
     <div id="sign">
       <div class="pad">
-        <h1>This is no joke, and illegal.</h1>
-        <h4>The US government has secretly built the largest, most illlegal surveillance system in history. Tell us if you think this is wrong and want to help stop it.</h4>
+        <h1>This is no joke,<br />and unconstitutional.</h1>
+        <h4>The US government has secretly built the largest surveillance system in history - they have our phone calls, location, and more. Tell us if you think this is wrong and want to help stop it.</h4>
 
         <form action="http://hq-nt.salsalabs.com/save" method="POST">
           <input type="hidden" name="object" value="supporter">
           <input type="hidden" name="organization_KEY" value="501" />
-          <div class="field">
-            <input type="text" name="First_Name" placeholder="First Name"/>
-          </div>
-          <div class="field">
-            <input type="text" name="Last_Name" placeholder="Last Name"/>
-          </div>
           <div class="field">
             <input type="text" name="Email" placeholder="E-mail"/>
           </div>
@@ -120,8 +112,6 @@ title: We're watching you. Sincerely, the NSA.
             <input type="submit" value="sign"/>
           </div>
         </form>
-
-        <p><input type="checkbox" name="add_to_eff" id="c1" /><label for="c1"><span></span> Sign up to receive occasional updates about defending online privacy.</label></p>
       </div>
     </div>
   </div>
@@ -184,7 +174,7 @@ title: We're watching you. Sincerely, the NSA.
 <footer>
   <div class="container">
     <div id="logos">
-      <a href="#"><img src="/images/fftf.png" class="fftf"/></a>
+      <a href="http://fightforthefuture.org/"><img src="/images/fftf.png" class="fftf"/></a>
     </div>
     <div class="clear"></div>
     <hr/>
@@ -192,11 +182,9 @@ title: We're watching you. Sincerely, the NSA.
     <h4>A project of Fight for the Future</h4>
 
     <div class="nav">
-      <a href="#">Privacy Policy</a>
+      <a href="http://fightforthefuture.org/privacy/">Privacy Policy</a>
       <p>|</p>
-      <a href="#">Contact Us</a>
-      <p>|</p>
-      <a href="#">Press Release</a>
+      <a href="mailto:press@fightforthefuture.org">Contact Us</a>
     </div>
   </div>
 
